# sev-cap

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  config.py  packages.txt  pyproject.toml  requirements-agent.txt  requirements.txt  schemas.py  streamlit_app.py
.github/workflows/: publish.yml
.streamlit/: config.toml  secrets.toml.example
demo/: app.py  run_server.py  start_in_screen.sh  start_public.sh  start_share.sh  watchdog.sh
docs/: demo_recording_script.md  slides.md  submission.md
eval/: judge.py  run_eval.py
pipeline/: __init__.py  analyze.py  caption.py  extract.py  transcribe.py
sample_input/: tasks.json
scripts/: download_clips.sh  generate_presentation.py  make_deck.py  probe_models.py  smoke_one_clip.py  validate_harness.py
src/sevcap/: __init__.py  __main__.py  audio.py  cli.py  config.py  entropy.py  extractor.py  fireworks.py  gates.py  generator.py  grounded.py  io_contract.py  pipeline.py  prejudge.py  refine.py  sampler.py  styles.py
tests/: conftest.py  test_clip_profile.py  test_config.py  test_entropy.py  test_gates_refine.py  test_io_and_sampler.py
