[project]
name = "sevcap"
version = "0.1.0"
description = "SEV-Cap: Semantic-Entropy Verified multi-style video captioning (Gemma 3 on Fireworks AI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "faster-whisper>=1.0",
    "gradio>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
sevcap = "sevcap.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
