[project]
name = "sevcap"
version = "0.1.0"
description = "SEV-Cap: grounded multi-style video captioning for AMD Track 2"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
demo = ["streamlit>=1.28"]

[project.scripts]
sevcap = "sevcap.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
