[project]
name = "sevcap"
version = "0.1.0"
description = "SEV-Cap: multi-style video captioning for AMD Track 2"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
    "requests>=2.31",
    "faster-whisper>=1.0",
]

[project.optional-dependencies]
demo = ["streamlit>=1.28"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent", "config", "schemas"]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
